Fix z-index bug with task cards - Opacity applied to task cards was bringing them to the top of the stack - Need to specify z-index for those elements and set their positioning (to relative will do);

--- a/src/style.css
+++ b/src/style.css
@@ -123,6 +123,7 @@ form {
     background-color: rgb(184, 219, 248);
     width: 70vh;
     gap: 10px;
+    z-index: 5;
 }
 
 form input, select{
@@ -157,6 +158,7 @@ form button {
 }
 
 .card {
+    position: relative;
     display: flex;
     border-radius: 10px;
     width: 100%;
@@ -191,6 +193,7 @@ form button {
 
 .card:has(.active) {
     opacity: 0.5;
+    z-index: 2;
 }
 
 .complete-button.active ~ h3, .complete-button.active ~ h4 {
